	* make files deleted alert non-discardable
	* make built-in sha functions not conflict with libcrypto
	* improve web seed hash failure case
	* improve DHT lookup times
	* uTP path MTU discovery improvements
	* optimized the torrent creator optimizer to scale significantly better
	  with more files
	* fix uTP edge case where udp socket buffer fills up
	* fix nagle implementation in uTP

	* fixed overflow and download performance issue when downloading at high rates
	* fixed bug in add_torrent_alert::message for magnet links
	* disable optimistic disconnects when connection limit is low
	* improved error handling of session::listen_on
	* suppress initial 'completed' announce to trackers added with replace_trackers
	  after becoming a seed
	* SOCKS4 fix for trying to connect over IPv6
	* fix saving resume data when removing all trackers
	* fix bug in udp_socket when changing socks5 proxy quickly

0.16.17 release

	* don't fall back on wildcard port in UPnP
	* fix local service discovery for magnet links
	* fix bitfield issue in file_storage
	* added work-around for MingW issue in file I/O
	* fixed sparse file detection on windows
	* fixed bug in gunzip
	* fix to use proxy settings when adding .torrent file from URL
	* fix resume file issue related to daylight savings time on windows
	* improve error checking in lazy_bdecode

0.16.16 release

	* add missing add_files overload to the python bindings
	* improve error handling in http gunzip
	* fix debug logging for banning web seeds
	* improve support for de-selected files in full allocation mode
	* fix dht_bootstrap_alert being posted
	* SetFileValidData fix on windows (prevents zero-fill)
	* fix minor lock_files issue on unix

0.16.15 release

	* fix mingw time_t 64 bit issue
	* fix use of SetFileValidData on windows
	* fix crash when using full allocation storage mode
	* improve error_code and error_category support in python bindings
	* fix python binding for external_ip_alert

0.16.14 release
